Adicionar seções de estatísticas da Bíblia e navegação entre testamentos na página da Bíblia, além de melhorias no estilo e na estrutura do layout. Atualizar links de navegação no Navbar e implementar carregamento dinâmico de comentários bíblicos na seção de estudos.

--- a/src/app/louvor/page.module.css
+++ b/src/app/louvor/page.module.css
@@ -296,6 +296,32 @@
   color: var(--preto);
 }
 
+.playBtn {
+  width: auto;
+  height: auto;
+  border-radius: 4px;
+  padding: 0.5rem 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--vermelho);
+}
+
+.playBtn:hover {
+  background-color: var(--dourado);
+}
+
+.playIcon::before {
+  content: "▶";
+  font-size: 1rem;
+  color: var(--branco);
+  margin-right: 5px;
+}
+
+.playBtn:hover .playIcon::before {
+  color: var(--preto);
+}
+
 .semResultados {
   grid-column: 1 / -1;
   text-align: center;
